# codepilot

./: .env.example  .gitignore  LICENSE  README.md  main.py  pyproject.toml
codepilot/: __init__.py
codepilot/agent/: graph.py  instructions.py  llm.py  memory.py  react.py
codepilot/cli/: main.py
codepilot/core/: __init__.py  config.py  database.py  metrics.py  redis_client.py
codepilot/indexer/: __init__.py  repo.py
codepilot/mcp_server/: server.py
codepilot/server/: demo.py  main.py  run.py  schemas.py
codepilot/server/static/: app.js  index.html  styles.css
codepilot/tools/: __init__.py  filesystem.py  git.py  safety.py  shell.py
codepilot/workers/: metrics_worker.py  repo_index_worker.py
deploy/: docker-compose.local.yml  docker-compose.yml  nginx.conf  prometheus.yml
docs/: app.js  index.html  styles.css
scripts/: load_test.py  sqlite_shell.py
skills/fastapi_api_generator/: prompt.md  skill.yaml
skills/pytest_debugger/: prompt.md  skill.yaml
skills/readme_writer/: prompt.md  skill.yaml
tests/: test_cli_server_imports.py  test_config_database.py  test_index_agent.py  test_tools.py
